; ModuleID = '/home/carl/AnghaBench/openssl/crypto/asn1/extr_i2d_param.c_i2d_KeyParams.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/asn1/extr_i2d_param.c_i2d_KeyParams.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { {}* }

@ASN1_F_I2D_KEYPARAMS = common dso_local global i32 0, align 4
@ASN1_R_UNSUPPORTED_TYPE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @i2d_KeyParams(%struct.TYPE_6__* %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i8**, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i8** %1, i8*** %5, align 8
  %6 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %7 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %6, i32 0, i32 0
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %9 = icmp ne %struct.TYPE_5__* %8, null
  br i1 %9, label %10, label %28

10:                                               ; preds = %2
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 0
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %13, i32 0, i32 0
  %15 = bitcast {}** %14 to i32 (%struct.TYPE_6__*, i8**)**
  %16 = load i32 (%struct.TYPE_6__*, i8**)*, i32 (%struct.TYPE_6__*, i8**)** %15, align 8
  %17 = icmp ne i32 (%struct.TYPE_6__*, i8**)* %16, null
  br i1 %17, label %18, label %28

18:                                               ; preds = %10
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %19, i32 0, i32 0
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i32 0, i32 0
  %23 = bitcast {}** %22 to i32 (%struct.TYPE_6__*, i8**)**
  %24 = load i32 (%struct.TYPE_6__*, i8**)*, i32 (%struct.TYPE_6__*, i8**)** %23, align 8
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %26 = load i8**, i8*** %5, align 8
  %27 = call i32 %24(%struct.TYPE_6__* %25, i8** %26)
  store i32 %27, i32* %3, align 4
  br label %32

28:                                               ; preds = %10, %2
  %29 = load i32, i32* @ASN1_F_I2D_KEYPARAMS, align 4
  %30 = load i32, i32* @ASN1_R_UNSUPPORTED_TYPE, align 4
  %31 = call i32 @ASN1err(i32 %29, i32 %30)
  store i32 -1, i32* %3, align 4
  br label %32

32:                                               ; preds = %28, %18
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}

declare dso_local i32 @ASN1err(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
